syntax = "proto3";
package com.kantoniak.greendeer.proto;

import "com/kantoniak/greendeer/proto/run.proto";

option optimize_for = LITE_RUNTIME;
option java_multiple_files = true;

message GetListRequest {
    // Empty
}

message GetListResponse {
    RunList run_list = 1;
}

message GetStatsRequest {
    // Empty
}

message GetStatsResponse {
    Stats stats = 1;
}

message AddRunsRequest {
    RunList runs_to_add = 1;
}

message AddRunsResponse {
    RunList added_runs = 1;
}

message EditRunsRequest {
    RunList runs_to_edit = 1;
}

message EditRunsResponse {
    RunList changed_runs = 1;
}

message DeleteRunsRequest {
    repeated int32 ids = 1;
}

message DeleteRunsResponse {
    repeated int32 removed_ids = 1;
}

service RunService {
    rpc GetList(GetListRequest) returns (GetListResponse) {}
    rpc GetStats(GetStatsRequest) returns (GetStatsResponse) {}
    rpc AddRuns(AddRunsRequest) returns (AddRunsResponse) {}
    rpc EditRuns(EditRunsRequest) returns (EditRunsResponse) {}
    rpc DeleteRuns(DeleteRunsRequest) returns (DeleteRunsResponse) {}
}